fix: form label width on mobile

--- a/src/pages/Feedback/Feedback.page.scss
+++ b/src/pages/Feedback/Feedback.page.scss
@@ -17,7 +17,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     & label {
-      width: 80%;
+      width: 100%;
     }
   }
 
